--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,6 +183,7 @@ a:hover {
 }
 
 #logo-big {
+    font-size:medium;
     color: black;
     padding: 1rem auto 1rem 1rem;
     height: 70px;
@@ -304,6 +305,7 @@ a:hover {
 
 /* products */
 #products-grid-container {
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: "a a a"
@@ -313,20 +315,18 @@ a:hover {
                          "h i j";
     text-align: center;
     column-gap: 5rem;
+    
 
 }
 
-.product {
-    width: 100%;
-    /* box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.425); */
-    box-shadow: inset 0 0 30px 30px rgb(255, 255, 255);
-}
+
 
 #products-grid-container > .section-logo {
     font-size: 2rem;
     grid-area: a;
     text-align: center;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+    
 }
 #products-grid-container>#product-1-logo{
     grid-area: k;
@@ -342,50 +342,56 @@ a:hover {
 }
 
 
-#products-grid-container>#product-1 {
+#product-1 {
     background-image: url("../images/watering-ball.gif");
     background-size: contain;
     background-repeat: no-repeat;
-    height: 22rem;
-    width: 20rem;
+    height: 18rem;
+    width: 16rem;
     grid-area: b;
     -webkit-mask-image: url('data:image/svg+xml;utf8,<svg preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" viewBox="0 0 100 100" xml:space="preserve"><style type="text/css">.blur{filter:url(%23softedge);}</style><filter id="softedge"><feGaussianBlur stdDeviation="1.0"></feGaussianBlur></filter><g class="blur"><rect x="10" y="10" width="80" height="80"/></g></svg>'); 
 	-webkit-mask-size: cover; 
 }
 
-#products-grid-container>#product-2 {
+#product-2 {
     background-image: url("../images/Dropfeeder.gif");
     background-size: contain;
     background-repeat: no-repeat;
-    height: 22rem;
-    width: 20em;
+    height: 18rem;
+    width: 16em;
     grid-area: c;
     -webkit-mask-image: url('data:image/svg+xml;utf8,<svg preserveAspectRatio="none" version="0.5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" viewBox="0 0 100 100" xml:space="preserve"><style type="text/css">.blur{filter:url(%23softedge);}</style><filter id="softedge"><feGaussianBlur stdDeviation="1"></feGaussianBlur></filter><g class="blur"><rect x="10" y="10" width="80" height="80"/></g></svg>'); 
 	-webkit-mask-size: cover; 
 }
 
-#products-grid-container>#product-3 {
+#product-3 {
     background-image: url("../images/string.gif");
     background-size: contain;
     background-repeat: no-repeat;
-    height: 22rem;
-    width: 20rem;
+    height: 18rem;
+    width: 16rem;
     grid-area: d;
     -webkit-mask-image: url('data:image/svg+xml;utf8,<svg preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" viewBox="0 0 100 100" xml:space="preserve"><style type="text/css">.blur{filter:url(%23softedge);}</style><filter id="softedge"><feGaussianBlur stdDeviation="1"></feGaussianBlur></filter><g class="blur"><rect x="10" y="10" width="80" height="80"/></g></svg>'); 
 	-webkit-mask-size: cover; 
 }
 
 #products-grid-container>#product-1-info {
+    padding: 0.5rem;
+    text-align: left;
     grid-area: e;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
 }
 
 #products-grid-container>#product-2-info {
+    padding: 0.5rem;
+    text-align: left;
     grid-area: f;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
 }
 
 #products-grid-container>#product-3-info {
+    padding: 0.5rem;
+    text-align: left;
     grid-area: g;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
 }
@@ -426,39 +432,24 @@ a:hover {
 
 /* purchase form */
 #main-fieldset {
+    margin: 0 auto 2rem auto;
+    padding-bottom: 2rem;
+    width:fit-content;
+    text-align: center;
     background-color: rgb(206, 206, 206);
-    padding: 2rem 2rem;
-    font-size: 1.5rem;
-    max-width: 40%;
-    min-width: 300px;
-    margin: 0 auto 5rem auto;
-    border-radius: 10px;
-    border: dotted;
-}
-
-#main-fieldset legend {
-    background-color: rgb(204, 203, 200);
-    border: 1px solid black;
-    border-radius: 10px;
-    transform: scale(1.0);
-    padding: 0 0.5rem;
-    margin-left: 3rem;
-    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
-}
-
-#main-fieldset fieldset {
     font-size: 1rem;
-    padding: 1rem;
-    min-width: 240px;
     border-radius: 10px;
-    border: dotted;
+    border: none;
 }
 
-#submit {
+#main-fieldset fieldset{
+    border: none;
     padding: 1rem;
+}
+#submit {
+    padding: 1vw;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
     font-size: 2rem;
-    /* border:4px solid white; */
     background-color: rgb(120, 223, 106);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
     border-radius: 10px;
@@ -611,17 +602,31 @@ input:focus{
         display: grid;
         grid-template-columns: 1fr;
         grid-template-areas: "a"
-            "b"
-            "e"
-            "h"
-            "c"
-            "f"
-            "i"
-            "d"
-            "g"
-            "j";
+                             "k"
+                             "b"
+                             "e"
+                             "h"
+                             "l"
+                             "c"
+                             "f"
+                             "i"
+                             "m"
+                             "d"
+                             "g"
+                             "j";
     }
 
+    #product-1{
+        margin: 0 auto;
+    }
+
+    #product-2{
+        margin: 0 auto;
+    }
+
+    #product-3{
+        margin: 0 auto;
+    }
     #products-grid-container>#product-1-info {
         margin-bottom: 2rem;
         grid-area: e;
@@ -656,7 +661,7 @@ input:focus{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-areas: "a a a"
-            "b c d";
+                             "b c d";
     }
 
     #hamburger {
@@ -671,12 +676,13 @@ input:focus{
 
     #hamburger-container a {
         width: 100%;
-        font-size: 1.5rem;
+        font-size: 1rem;
         line-height: 3rem;
         background-color: rgb(255, 255, 255);
         display: none;
         text-align: left;
         padding: 0 1rem;
+        word-spacing: 3rem;
     }
 
     #hamburger-container:hover a {
@@ -733,4 +739,8 @@ input:focus{
     #products-grid-container>#product-3-buy {
         margin: -2rem auto 2rem auto;
     }
+    #product-1, #product-2, #product-3{
+        /* max-height: 60vw; */
+    }
+    
 }
