--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,6 +350,7 @@ a:hover {
     background-image: url("../images/watering-ball.gif");
     background-size: contain;
     background-repeat: no-repeat;
+    background-position: bottom;
     height: 18rem;
     width: 16rem;
     grid-area: b;
