--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,9 +213,46 @@ a:hover {
     line-height: 70px;
 }
 
-#hamburger-container {
+
+
+#dropdown-menu{
     display: none;
-    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.63);
+    float: right;
+    text-align: right;
+    position: relative;
+    width: 100%;
+    padding-right: 2rem;
+}
+
+#dropdown-menu button{
+    background-color: rgba(250, 235, 215, 0);
+    color: grey;
+    font-size: 4rem;
+    border: none;
+}
+#dropdown-menu ul{
+    
+    position: absolute;
+    top: 5rem;
+    background-color: rgba(255, 255, 255, 0.822);
+    width: 100%;
+    list-style: none;
+    font-size: 2rem;
+    line-height: 0px;
+    text-align: right;
+    transition: 0.5s;
+    opacity: 0;
+    
+}
+#dropdown-menu a{
+    text-decoration: none;
+    letter-spacing: 0.5rem;
+    text-align: right;
+    padding-right: 1rem;
+}
+#dropdown-menu:hover ul{
+    line-height: 4rem;
+    opacity: 1;
 }
 
 /* presentation */
@@ -659,41 +696,10 @@ input:focus{
         display: none;
     }
 
-    #hamburger-container {
-        width: 100%;
-        position: absolute;
-        top: 1rem;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-areas: "a a a"
-                             "b c d";
-    }
-
-    #hamburger {
-        color: rgb(3, 92, 7);
-        padding-right: 1rem;
-        text-align: right;
-        grid-area: a;
-        border: none;
-        background-color: rgba(240, 248, 255, 0);
-        font-size: 3rem;
-    }
-
-    #hamburger-container a {
-        width: 100%;
-        font-size: 1rem;
-        line-height: 3rem;
-        background-color: rgb(255, 255, 255);
-        display: none;
-        text-align: left;
-        padding: 0 1rem;
-        word-spacing: 3rem;
-    }
-
-    #hamburger-container:hover a {
+    #dropdown-menu{
         display: block;
     }
-
+    
     #presentation-background {
         padding: 1rem;
     }
