--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,6 +483,13 @@ a:hover {
     border-radius: 10px;
     border: none;
 }
+
+#main-fieldset legend{
+    background-color: rgb(206, 206, 206);
+    padding: 1rem;
+    font-size: 1.3rem;
+
+}
  
 #main-fieldset fieldset{
     border: none;
@@ -717,7 +724,7 @@ input:focus{
         display: inline-block;
         word-spacing: 2rem;
         padding-bottom: 1rem;
-        font-size: 5rem;
+        font-size: 1rem;
         width: 100%;
     }
 
@@ -749,9 +756,6 @@ input:focus{
 
     #products-grid-container>#product-3-buy {
         margin: -2rem auto 2rem auto;
-    }
-    #product-1, #product-2, #product-3{
-        /* max-height: 60vw; */
     }
     
 }
