--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
     overflow-x: hidden;
 }
 
+/* adding a background color to whole site */
 #top {
     position: sticky;
     background: rgb(245,245,245);
@@ -30,11 +31,6 @@ body {
 a {
     color: rgb(0, 0, 0);
 }
-
-a:hover {
-
-}
-
 /* welcome-animation */
 #welcome-animation-container {
     z-index: 500000;
@@ -204,12 +200,18 @@ a:hover {
     font-size: 1.5rem;
     text-align: right;
     text-shadow: 0px 0px 4px rgb(205, 255, 217);
+    text-decoration: none;
 }
 
 .nav-item {
     float: right;
     margin: 0 2rem;
     line-height: 70px;
+    
+}
+
+.nav-item a{
+    text-decoration: none;
 }
 
 
@@ -380,6 +382,8 @@ a:hover {
 
 #products-grid-container img{
     width: 100%;
+    min-height: 100%;
+    margin-bottom: 0;
 }
 
 #products-grid-container h3{
@@ -435,7 +439,14 @@ a:hover {
     color:rgb(8, 168, 30);
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
     border: dotted;
-    box-shadow: 4px 4px 20px rgb(0, 0, 0);
+    box-shadow: 4px 4px 40px rgb(160, 160, 160);
+    line-height: 3rem;
+    padding: 1rem;
+}
+
+#products-grid-container a{
+    text-decoration: none;
+    font-size: 1.3rem;
 }
 
 #fun-quote-text {
