--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,31 +455,38 @@ section h2{
     text-align: center;
 }
 
+form{
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+}
 #main-fieldset {
-    margin: 0 auto 2rem auto;
-    padding-bottom: 2rem;
-    width:fit-content;
-    text-align: left;
-    background-color: rgb(206, 206, 206);
-    font-size: 1rem;
-    border-radius: 10px;
-    border: none;
+    background-color: rgba(4, 134, 25, 0.534);
+    padding: 1rem;
+    border-radius: 1rem;
+
 }
 
 #main-fieldset legend{
-    background-color: rgb(206, 206, 206);
-    padding: 1rem;
-    font-size: 1.3rem;
-
+    padding: 0.2rem;
+    background-color: rgb(4, 134, 26);
+font-size: 1.2rem;
+border: 1px dotted black;
+border-radius: 1rem;
 }
  
 #main-fieldset fieldset{
-    border: none;
-    padding: 1rem;
+    padding: 0.2rem;
+    border-radius: 1rem;
+    border: 1px dotted black;
+    margin-bottom: 1rem;
+
 }
 
 select {
-    color:black;
+    color: black;
+
 }
 #submit {
     width: 70%;
