--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,20 +434,47 @@ a {
 /* About */
 #about {
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
-    padding-top: 3rem;
-    width: 60%;
+    padding-top: 1rem;
+    width: 80%;
     margin: 0 auto;
     font-size: 1rem;
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
 }
 
-#options {
-    list-style:inside;
+#about-grid-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "a b"
+                         "c c";
     padding: 1rem;
 }
+
+#section-a {
+    grid-area: a;
+    background-color: rgba(60, 187, 60, 0.623);
+    padding: 1rem;
+    border-radius: 1rem 0 0 1rem;
+}
+#section-b {
+    grid-area: b;
+    background-color: rgba(60, 187, 60, 0.623);
+    padding: 1rem;
+    border-radius: 0 1rem 1rem 0;
+}
+#section-c {
+    margin-top: 3rem ;
+    grid-area: c;
+    background-color: rgba(60, 187, 60, 0.623);
+    padding: 1rem;
+    border-radius: 1rem;
+}
+#options {
+list-style: inside;
+}
 #options ul{
-    list-style:inside;
-    padding: 0 0 0 3rem;
+    padding: 0 0 0 2rem;
+    
+
 }
 
 /* purchase form */
@@ -462,7 +489,7 @@ form{
     margin-bottom: 1rem;
 }
 #main-fieldset {
-    background-color: rgba(4, 134, 25, 0.534);
+    background-color: rgba(60, 187, 60, 0.623);
     padding: 1rem;
     border-radius: 1rem;
 
@@ -470,7 +497,7 @@ form{
 
 #main-fieldset legend{
     padding: 0.2rem;
-    background-color: rgb(4, 134, 26);
+    background-color: rgb(60, 187, 60);
 font-size: 1.2rem;
 border: 1px dotted black;
 border-radius: 1rem;
