--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,13 +385,13 @@ a {
     grid-area: e;
 }
 
-#grey-top-line{
+.grey-top-line{
     background-color: rgba(0, 0, 0, 0.26);
     height: 2rem;
     width: 100%;
 }
 
-#grey-bottom-line{
+.grey-bottom-line{
     background-color: rgba(201, 21, 21, 0);
     height: 2rem;
     width: 100%;
@@ -790,14 +790,14 @@ input:hover{
     .shop-button{
         margin-top: 1rem;
     }
-    #grey-top-line{
+    .grey-top-line{
         background-color: rgba(0, 0, 0, 0);
         width: 100%;
         height: 2rem;
 
     }
 
-    #grey-bottom-line{
+    .grey-bottom-line{
         background-color: rgba(0, 0, 0, 0.26);
 
     }
